--- a/sites/all/themes/slac/sass/components/_calendar-mobile.scss
+++ b/sites/all/themes/slac/sass/components/_calendar-mobile.scss
@@ -309,6 +309,10 @@
       text-align: right;
     }
 
+    .day-view .time {
+      width: 115px;
+    }
+
     .title {
       position: relative;
       top: -6px;
